fixed X icon bug on firefox

--- a/src/app/features/bank-select-no/bank-select.component.scss
+++ b/src/app/features/bank-select-no/bank-select.component.scss
@@ -91,6 +91,10 @@ mat-selection-list {
   img {
     width: 4%;
   }
+
+  ::ng-deep .mat-icon-button {
+    min-width: none !important;
+  }
 }
 .bank-button {
   width: 100%;
